test/files/neg/t10097.check
t10097.scala:3: error: case classes must have a non-implicit parameter list; try 'case class C()(...)'
case class C(implicit val c: Int)
            ^
t10097.scala:5: error: case classes must have a non-implicit parameter list; try 'case class D()(...)(...)'
case class D(implicit c: Int)(s: String)
            ^
t10097.scala:5: error: an implicit parameter section must be last
case class D(implicit c: Int)(s: String)
             ^
t10097.scala:7: error: case classes must have a non-implicit parameter list; try 'case class *()(...)'
case class *(implicit c: Int)
            ^
t10097.scala:10: error: identifier expected but 'import' found.
import collection._
^
t10097.scala:10: error: case classes must have a parameter list; try 'case class C()' or 'case object C'
import collection._
                   ^
6 errors found
